--- a/src/styles/adminDashboard.css
+++ b/src/styles/adminDashboard.css
@@ -134,7 +134,7 @@
   border-radius: 8px;
   cursor: pointer;
   font-weight: 500;
-  transition: background-color 0.3s ease, transform 0.2s ease;
+  transition: 0.3s ease, transform 0.2s ease;
 }
 
 .add-products button:hover {
@@ -142,13 +142,15 @@
   transform: translateY(-1px);
 }
 .single-product{
+  /* flex: 1; */
    display: flex;
   flex-direction: column;
-  gap: 5px;
-  background-color: rgb(179, 172, 172);
-  padding: 5px;
+  /* gap: 5px; */
+  justify-content: space-around;
+  background-color: rgb(206, 197, 197);
+  /* padding: 5px ; */
   border-radius: 1rem;
-  height: 70%;
+  /* height: 70%; */
 }
 
 
