--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -63,8 +63,20 @@
   font-weight: 500;
   transition: color 0.2s ease-in-out;
 }
+.navbar-links li button {
+
+  background: none;
+  border: none;
+  color: white;
+  font-weight: 500;
+  transition: color 0.2s ease-in-out;
+}
 
 .navbar-links li a:hover {
+  color: #60a5fa;
+}
+.navbar-links li button:hover {
+  cursor: pointer;
   color: #60a5fa;
 }
 
@@ -80,6 +92,7 @@
     flex-direction: column;
     align-items: flex-start;
   }
+ 
 
   .navbar-search {
     flex-direction: column;
